Fixed bug #52104 (bindColumn creates Warning regardless of ATTR_ERRMODE settings).